@@ -1,6 +1,6 @@
 ## Proxy Makefile.am to build libpng for TeX Live.
 ##
-##   Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
+##   Copyright (C) 2009-2016 Peter Breitenlohner <tex-live@tug.org>
 ##
 ##   This file is free software; the copyright holder
 ##   gives unlimited permission to copy and/or distribute it,
@@ -20,7 +20,8 @@ NEVER_NAMES += $(NEVER_NAMES_SUB)
 
 SUBDIRS = . include
 
-AM_CPPFLAGS = -I$(top_srcdir)/$(LIBPNG_TREE) $(ZLIB_INCLUDES) $(LIBPNG_DEFINES)
+AM_CPPFLAGS = -I$(top_srcdir)/$(LIBPNG_TREE) $(ZLIB_INCLUDES) \
+              $(LIBPNG_DEFINES) $(LIBPNG_USER_CPPFLAGS)
 AM_CFLAGS = $(VISIBILITY_CFLAGS) $(WARNING_CFLAGS)
 
 noinst_LIBRARIES=libpng.a
